--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,72 @@ main {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr minmax(100px, max-content);
+    
 }
+
+.type-temtem-container {
+    display: flex;
+    align-items: center;
+}
+
+.type-temtem-container>img {
+    height: 40px;
+}
+
+.image-temtem-container {
+    background-color: lightblue;
+    grid-row: 1/3;
+    grid-column: 3;
+    height: 100px;
+    width: 100px;
+    border: var(--border-detail);
+}
+
+.image-temtem-container>img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+input {
+    padding: 3px;
+    border: 2px solid var(--color-degraded-light);
+    border-radius: 5px;
+}
+
+input[type="number"] {
+    width: 6ch;
+    text-align: center;
+}
+
+.stats-container {
+    grid-column: 1/4;
+    display: grid;
+    grid-template-columns: repeat(6, auto);
+    background-color: lightblue;
+}
+
+.stats-container>div {
+    display: grid;
+    grid-template-rows: repeat(9, 1fr);
+    margin: 0 auto;
+    text-align: center;
+}
+
+.stats-container input {
+    margin: 0 auto;
+}
+
+.stats-tvs-range>p {
+    text-align: end;
+}
+
+input[type="range"] {
+    width: 300px;
+}
+
 
 /* ----------------------------------------------------------------------------------------------------- */
 
