--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,10 @@ button[class~="actual-slot"] {
     gap: 10px;
 }
 
+.ability-temtem-container input {
+    cursor: pointer;
+}
+
 .type-temtem-container {
     display: flex;
     align-items: center;
@@ -247,12 +251,14 @@ button[class~="actual-slot"] {
     height: 100px;
     width: 100px;
     border: var(--border-detail);
+    border-radius: 10px;
 }
 
 .image-temtem-container>img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 input {
@@ -292,12 +298,52 @@ input[type="range"] {
     width: 300px;
 }
 
-.searcher {
-    grid-column: 1/4;
-    background-color: lightblue;
 
+input[class^="attack-temtem"] {
+    cursor: pointer;
+    text-align: center;
+
+    background-position: left;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
+.type-Neutral {
+    background-image: url('../img/types/Neutral.png');
+}
+.type-Fire {
+    background-image: url('../img/types/Fire.png');
+}
+.type-Water {
+    background-image: url('../img/types/Water.png');
+}
+.type-Nature {
+    background-image: url('../img/types/Nature.png');
+}
+.type-Electric {
+    background-image: url('../img/types/Electric.png');
+}
+.type-Earth {
+    background-image: url('../img/types/Earth.png');
+}
+.type-Mental {
+    background-image: url('../img/types/Mental.png');
+}
+.type-Wind {
+    background-image: url('../img/types/Wind.png');
+}
+.type-Digital {
+    background-image: url('../img/types/Digital.png');
+}
+.type-Melee {
+    background-image: url('../img/types/Melee.png');
+}
+.type-Crystal {
+    background-image: url('../img/types/Crystal.png');
+}
+.type-Toxic {
+    background-image: url('../img/types/Toxic.png');
+}
 
 .wiki-container {
     width: 100px;
@@ -309,6 +355,76 @@ input[type="range"] {
     width: 100%;
 }
 
+
+
+.searcher {
+    border-radius: 10px;
+    border: var(--border-detail);
+    padding: 3px;
+    grid-column: 1/4;
+}
+
+#search-explained {
+    text-align: center;
+    text-shadow: 0 0 5px black;
+    color: white;
+}
+
+#search-loader {
+    display: flex;
+    justify-content: center;
+}
+
+.loader {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+
+}
+.loader div {
+    position: absolute;
+    border: 4px solid var(--color-details);
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.loader div:nth-child(2) {
+    animation-delay: -0.5s;
+}
+
+@keyframes lds-ripple {
+    0% {
+    top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    4.9% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    5% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+}
+  
 
 .search-result-container {
     height: 400px;
